fix center alignment for logo-header

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 .logo-header {
     display: flex;
     margin-left: 20px;
+    align-items: center;
 }
 
 .nav img {
